# khronos-spec-reader

./: package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  output.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: command.tsx  commandList.tsx
