[package]
name = "spec-reader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.0.0-beta.13"
tauri-plugin-fs = "2.0.0-beta.12"
tokio = { version = "1.39.2", features = ["full"] }
reqwest = "0.12.5"
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde_derive = "1.0.207"

